--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -99,29 +99,10 @@
                 <h2>Personal Details</h2>
               </div>
               <div class="details">
+                <p>Total Logins • <%= totalLogins %></p>
                 <p>Username • <%= username %></p>
                 <p>Email • <%= email %></p>
                 <p>Account Activated • <%= createdAt %></p>
-                <p>IP Address • <%= ip %></p>
-              </div>
-            </div>
-
-            <div class="recent__activity-box">
-              <div class="activity-heading">
-                <h2>Recent Files</h2>
-              </div>
-              <div class="details">
-                <% if (recentFiles.length === 0) { %>
-                <p>
-                  No file hsitory found. Wait for someone to upload. Note that
-                  Only Filesize and Uploader information will appear here.
-                </p>
-                <% } else { %> <% recentFiles.forEach(file => { %>
-                <p>
-                  <%= file.uploaderInfo.email %> •
-                  <span class="file-size"><%= file.fileSize %></span>
-                </p>
-                <% }) %> <% } %>
               </div>
             </div>
 
@@ -130,15 +111,9 @@
                 <h2>Recent Users</h2>
               </div>
               <div class="details">
-                <% if (recentUsers.length === 0) { %>
-                <p>
-                  No User account details found. Invite someone to create an
-                  account and then come back. Note that only Filesize and
-                  Uploader information will appear here.
-                </p>
-                <% } else { %> <% recentUsers.forEach(user => { %>
+                <% recentUsers.forEach(user => { %>
                 <p><%= user.username %> • <%= user.email.address %></p>
-                <% }) %> <% } %>
+                <% }) %>
               </div>
             </div>
           </div>
